<resources>
    <string name="app_name">RecipeHub</string>
    <string-array name="tipos_de_receita">
        <item>Tipo</item>
        <item>Normal</item>
        <item>Vegetariano</item>
        <item>Vegano</item>
        <item>Sem lactose</item>
        <item>Sem glúten</item>
        <item>Sem açúcar</item>
    </string-array>
    <string name="nome_receita">Nome:</string>
    <string name="ingredientes">Ingredientes: </string>
    <string name="tempo">Tempo:</string>
    <string name="sal">Salgado</string>
    <string name="doce">Doce</string>
    <string-array name="database">
        <item>Bolo de cenoura</item>
        <item>Suflê de couve-flor</item>
        <item>Macarrão da Vovó</item>
    </string-array>
    <string name="preparo">Modo de preparo:</string>
    <string name="tipo">Tipo: </string>
    <string name="nome">Nome: </string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="ingredient_description">Ex.: 1kg de feijão;</string>

    <string name="auth_failed">Email/senha incorreto(a)</string>

    <string name="minimum_password">Mínimo de 6 caracteres na senha</string>

    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="change_email">Mudar email</string>
    <string name="change_password">Mudar senha</string>
    <string name="send_password_reset_email">Enviar o email de resetar a senha</string>
    <string name="remove_user">Remover usuario</string>
    <string name="new_pass">Nova senha</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Entrar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Não tem uma conta? Crie agora!</string>
    <string name="btn_link_to_login">Entrar</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Esqueceu sua senha?</string>
    <string name="btn_reset_password">Resetar a senha</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Mudar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Remover</string>
    <string name="btn_sign_out">Sair</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="forgot_password_msg">Informe seu email cadastrado.</string>

    <string name="pesquisar">Pesquisar</string>

    <string name="seguidores">Seguidores: </string>
    <string name="seguindo">Seguindo: </string>

    <string name="novaReceita">Nova receita</string>

    <string name="facebook_app_id"> 293406734472695 </string>

    <string name="drawer_open">bhdhvcv</string>
    <string name="drawer_close">bhdhvcv</string>
    <string name="editar">Editar</string>

    <string name="sobre_title">Sobre os desenvolvedores:</string>
    <string name="minutes">min</string>
    <string name="title_activity_new_menu">NewMenuActivity</string>
    <string name="feed">Feed de Notícias</string>
    <string name="preferencias">Preferências</string>
    <string name="tabela">Tabela de época</string>
    <string name="sair">Sair</string>
    <string name="salvar">Salvar</string>
</resources>
