<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_receita"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/criarReceita"
    >

    <TextView
        android:id="@+id/tv_nomeReceita_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_nomeReceita_Act_telaReceita"
        android:layout_alignBottom="@+id/et_nomeReceita_Act_telaReceita"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:text="@string/nome_receita"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_nomeReceita_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_tempoReceita_Act_telaReceita" />

    <TextView
        android:id="@+id/tv_ingredientesReceita_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_nomeReceita_Act_telaReceita"
        android:layout_below="@+id/et_nomeReceita_Act_telaReceita"
        android:layout_marginTop="22dp"
        android:text="@string/ingredientes"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_ingredientesReceita_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_ingredientesReceita_Act_telaReceita"
        android:layout_below="@+id/tv_ingredientesReceita_Act_telaReceita"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/ingredient_description"
        android:inputType="textMultiLine"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_tempoReceita_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_ingredientesReceita_Act_telaReceita"
        android:layout_below="@+id/et_ingredientesReceita_Act_telaReceita"
        android:layout_marginTop="44dp"
        android:text="@string/tempo"
        android:textColor="#ff000000" />

    <EditText
        android:id="@+id/et_tempoReceita_Act_telaReceita"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@id/tv_tempoReceita_Act_telaReceita"
        android:layout_alignTop="@+id/tv_tempoReceita_Act_telaReceita"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@+id/tv_nomeReceita_Act_telaReceita"
        android:inputType="time"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/tv_tempoReceita_Act_telaReceita"
        android:layout_below="@+id/et_tempoReceita_Act_telaReceita"
        android:id="@+id/tipoRadioGroup_Act_telaReceita">

        <RadioButton
            android:id="@+id/rb_salgado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/sal" />

        <RadioButton
            android:id="@+id/rb_doce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doce" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_tipo_Act_telaReceita"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="101dp"
        android:layout_marginTop="300dp"
        android:spinnerMode="dialog" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_criarReceita_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:fabSize="normal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tv_preparoReceita_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_tempoReceita_Act_telaReceita"
        android:layout_below="@+id/tipoRadioGroup_Act_telaReceita"
        android:layout_marginTop="30dp"
        android:text="@string/preparo"
        android:textColor="#ff000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_preparoReceita_Act_telaReceita"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_alignBottom="@+id/fab_criarReceita_Act_telaReceita"
        android:layout_below="@+id/tv_preparoReceita_Act_telaReceita"
        android:layout_margin="12dp"
        android:gravity="top"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollbarAlwaysDrawVerticalTrack="true" />

    <TextView
        android:id="@+id/tv_minutes_Act_telaReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="min"
        android:layout_alignBaseline="@+id/et_tempoReceita_Act_telaReceita"
        android:layout_alignBottom="@+id/et_tempoReceita_Act_telaReceita"
        android:layout_toEndOf="@+id/et_tempoReceita_Act_telaReceita" />

    <ImageView
        android:id="@+id/imageView_Act_telaReceita"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/et_tempoReceita_Act_telaReceita"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/imageButton_Act_telaReceita"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/fab_criarReceita_Act_telaReceita"
        android:layout_alignStart="@+id/fab_criarReceita_Act_telaReceita"
        android:layout_below="@+id/tv_ingredientesReceita_Act_telaReceita"
        android:background="@drawable/ic_add_a_photo_black_24dp" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/et_preparoReceita_Act_telaReceita"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/et_preparoReceita_Act_telaReceita"
        android:text="Sign Out"
        android:textAllCaps="false" />


</RelativeLayout>
