<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_versionamento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/criarReceita">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_versionarReceita_Act_versionamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        app:fabSize="normal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|end"
        android:elevation="6dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="550dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txinput_nome_Act_versionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/criarReceita">

            <EditText
                android:id="@+id/et_nomeReceita_Act_versionamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nome"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/et_tempoReceita_Act_versionamento" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tv_ingredientesReceita_Act_versionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/ingredientes"
            android:layout_alignBottom="@+id/imageView_Act_versionamento"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_ingredientesReceita_Act_versionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ingredientesReceita_Act_versionamento"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/ingredient_description"
            android:textColorHint="@color/input_login_hint"
            android:inputType="textMultiLine"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_tempoReceita_Act_versionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_ingredientesReceita_Act_versionamento"
            android:layout_marginTop="44dp"
            android:text="@string/tempo"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/et_tempoReceita_Act_versionamento"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_below="@+id/tv_tempoReceita_Act_versionamento"
            android:layout_alignEnd="@+id/tv_tempoReceita_Act_versionamento"
            android:inputType="time"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginTop="14dp"/>

        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignStart="@+id/tv_tempoReceita_Act_versionamento"
            android:layout_below="@+id/et_tempoReceita_Act_versionamento"
            android:id="@+id/tipoRadioGroup_Act_versionamento">

            <RadioButton
                android:id="@+id/rb_salgado_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/sal" />

            <RadioButton
                android:id="@+id/rb_doce_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doce" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner_tipo_Act_versionamento"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="101dp"
            android:layout_marginTop="300dp"
            android:spinnerMode="dialog" />


        <TextView
            android:id="@+id/tv_preparoReceita_Act_versionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_tempoReceita_Act_versionamento"
            android:layout_below="@+id/tipoRadioGroup_Act_versionamento"
            android:layout_marginTop="30dp"
            android:text="@string/preparo"
            android:textColor="#ff000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_preparoReceita_Act_versionamento"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginLeft="12dp"
            android:layout_below="@+id/tv_preparoReceita_Act_versionamento"
            android:layout_toStartOf="@+id/imageView_Act_versionamento"
            android:gravity="top"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textMultiLine"
            android:scrollbarAlwaysDrawVerticalTrack="true" />

        <TextView
            android:id="@+id/tv_minutes_Act_versionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="min"
            android:layout_alignBaseline="@+id/et_tempoReceita_Act_versionamento"
            android:layout_alignBottom="@+id/et_tempoReceita_Act_versionamento"
            android:layout_toEndOf="@+id/et_tempoReceita_Act_versionamento" />

        <ImageView
            android:id="@+id/imageView_Act_versionamento"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignRight="@id/txinput_nome_Act_versionamento"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/imageButton_Act_versionamento"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignRight="@id/txinput_nome_Act_versionamento"
            android:background="@drawable/ic_add_a_photo_black_24dp" />


        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>