<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    style="@android:style/Widget.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideInset"
    android:visibility="visible"
    android:orientation="vertical"
    tools:context="com.example.leonardomoraes.myapplication.OpenReceitaActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_Act_openReceita"
            android:layout_width="390dp"
            android:layout_height="70dp"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_Act_openReceita"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/nome_receita"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nome"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"
            android:text="@string/ingredientes"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ingredientes"
            android:layout_below="@+id/tv_ingredientesReceita_Act_openReceita"
            android:layout_marginTop="12dp"
            android:text="@string/tempo"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/preparo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tempo"
            android:layout_below="@+id/tempo"
            android:layout_marginTop="30dp"
            android:text="@string/preparo"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_nomeReceita_Act_openReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/nome"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/nome"
            android:text="TextView"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_ingredientesReceita_Act_openReceita"
            android:layout_width="210dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/ingredientes"
            android:layout_marginEnd="30dp"
            android:text="TextView"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_tempoReceita_Act_openReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tempo"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tempo"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_preparoReceita_Act_openReceita"
            android:layout_width="360dp"
            android:layout_height="150dp"
            android:layout_alignStart="@+id/preparo"
            android:layout_below="@+id/preparo"
            android:layout_marginTop="14dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_tempoReceita_Act_openReceita"
            android:layout_alignBottom="@+id/tv_tempoReceita_Act_openReceita"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/tv_tempoReceita_Act_openReceita"
            android:text="Tipo:"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tipoReceita_Act_openReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tipo"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tipo"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/preparo"
            android:layout_alignBottom="@+id/preparo"
            android:layout_alignParentEnd="true"
            android:text="version" />

        <ExpandableListView
            android:id="@+id/expand_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_preparoReceita_Act_openReceita"
            android:paddingTop="150dp"
            android:visibility="visible"
            style="@android:style/Widget.ScrollView"
            android:scrollbars="vertical"/>

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
